--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="script.js"></script> 
     <header>
         <div class="logo">
-            <a href="https://discord.gg/uBqdu7B7Bt" target="_blank" rel="noopener noreferrer"><img class="sylum" src="/Users/gameg/Downloads/new main/assets/ICON.gif"></a>
+            <a href="https://discord.gg/uBqdu7B7Bt" target="_blank" rel="noopener noreferrer"><img class="sylum" src="/assets/ICON.gif"></a>
         </div>
 
     </header>
