--- a/index.html
+++ b/index.html
@@ -23,11 +23,24 @@
         margin-top: 600px;
         text-decoration: none; 
         display: inline-block; 
-        transition: background-color 0.3s; 
+        transition: background-color 0.3s;
+    -webkit-touch-callout: none;
+       -webkit-user-select: none;
+       -khtml-user-select: none;
+       -moz-user-select: none;
+       -ms-user-select: none;
+       user-select: none;
+ 
     }
 
     .members:hover {
         background-color: #ffffff1f; 
+    -webkit-touch-callout: none;
+       -webkit-user-select: none;
+       -khtml-user-select: none;
+       -moz-user-select: none;
+       -ms-user-select: none;
+       user-select: none;
     }
 
 </style>
